# sbijax

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: all.sh  beta_binom.py  hg_run.sh  hierarchical_brownian.py  hierarchical_gaussian.py  plot_metrics.py  plot_metrics_n_theta.py  plotting_utils.py  seir.py  seir_mcmc.py  seir_mcmc_plot.py  seir_utils.py  sir.py
examples/conf/: brownian_config.yaml  config.yaml  seir_config.yaml  seir_mcmc_config.yaml  sveir_config.yaml
examples/conf/fmpe/: default.yaml
examples/conf/sfmpe/: default.yaml  indexed.yaml
sbijax/_src/: _ne_base.py  _sbi_base.py  fmpe.py  fmpe_test.py  infinite.py  infinite_test.py  test_infinite.py  transformer_test.py
sbijax/_src/nn/: make_continuous_flow.py  test_cnf.py
sbijax/_src/nn/transformer/: embedding.py  encoder.py  test_embedding.py  test_encoder.py  test_transformer.py  transformer.py
sbijax/_src/util/: dataloader.py
sfmpe/: _ne_base.py  _sbi_base.py  bijections.py  bottom_up.py  c2stnf.py  cnf.py  fmpe.py  lc2st.py  lc2stnf.py  pytree_bijector.py  sfmpe.py  structured_cnf.py  svf.py  train.py  train_rounds.py  utils.py  vanilla_fmpe.py
sfmpe/metrics/: lc2st.py  lc2stnf.py  mmd.py
sfmpe/nn/: make_continuous_flow.py  make_vanilla_cnf.py  mlp.py  smlp.py  transform.py  vanilla_mlp.py
sfmpe/nn/transformer/: embedding.py  encoder.py  transformer.py
sfmpe/util/: data.py  dataloader.py
test/: conftest.py  test_bottom_up.py  test_c2stnf.py  test_c2stnf_e2e.py  test_cnf.py  test_cnf_density.py  test_cnf_e2e.py  test_datasets.py  test_density.py  test_embedding.py  test_encoder.py  test_hierarchical.py  test_infinite.py  test_inverse_sampling.py  test_lc2st.py  test_lc2st_e2e.py  test_lc2stnf.py  test_lc2stnf_e2e.py  test_masking.py  test_mmd.py  test_pytree_bijector.py  test_sfmpe.py  test_structured.py  test_transformer.py
test/utils/: helpers.py
